feat: use of virtual threads, refactoring and documentation